export const snapshot = {};

snapshot[`Notification Count Command - Help Text 1`] = `
stdout:
"
Usage: count

Description:

  Show unread notification count

Options:

  -h, --help  - Show this help.  
  -j, --json  - Output as JSON   

"
stderr:
""
`;

snapshot[`Notification Count Command - JSON Parse Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Unknown option \\\\"--bogus\\\\". Did you mean option \\\\"--help\\\\"?",
    "suggestion": null,
    "context": "Failed to count notifications"
  }
}
'
stderr:
""
`;

snapshot[`Notification Count Command - Shows Count 1`] = `
stdout:
"3 unread notifications
"
stderr:
""
`;

snapshot[`Notification Count Command - JSON Output 1`] = `
stdout:
'{
  "unread": 3
}
'
stderr:
""
`;
